--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application'
     //id 'org.kordamp.gradle.errorprone' version "0.47.0"
 }
 
@@ -30,8 +31,7 @@ pitest {
     junitSPluginVersion = '0.12'
     pitestVersion = '1.15.0'
     excludedClasses = []
-}
+}*/
 application {
-
+    mainClass.set('com.l13gr03.pets.Game')
 }
-*/
