--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'application'
+    id 'info.solidsoft.pitest' version '1.15.0'
     //id 'net.ltgt.errorprone' version '2.0.2'
 }
 
@@ -18,7 +19,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testImplementation 'net.jqwik:jqwik:1.5.1'
     testImplementation 'org.mockito:mockito-core:4.0.0'
-   // errorprone("com.google.errorprone:error_prone_core:2.0.2")
+    //errorprone("com.google.errorprone:error_prone_core:2.0.2")
 }
 
 
@@ -28,12 +29,10 @@ test {
     }
 }
 
-/*
+
 pitest {
-    junitSPluginVersion = '0.12'
-    pitestVersion = '1.15.0'
-    excludedClasses = []
-}*/
+    targetClasses = ['com.l13gr03.pets.*']
+}
 application {
     mainClass.set('com.l13gr03.pets.Game')
 }
