--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
     id 'application'
-    //id 'info.solidsoft.pitest' version '1.15.0'
+    id 'info.solidsoft.pitest' version '1.15.0'
     //id 'net.ltgt.errorprone' version '2.0.2'
 }
 
@@ -29,7 +29,10 @@ test {
     }
 }
 
-
+pitest {
+    targetClasses = ['com.l13gr03.pets.*']
+    targetTests = ['com.l13gr03.pets.*']
+}
 
 application {
     mainClass.set('com.l13gr03.pets.Game')
